fixed navbar overlap

--- a/src/assets/sass/components/_app.sass
+++ b/src/assets/sass/components/_app.sass
@@ -5,6 +5,9 @@
   text-align: center
   color: $black
 
+body
+  padding-top: 70px
+
 a
   font-weight: bold
   color: $black
